:sparkles: 增加暗色模式

--- a/source/css/_pages/_base/inline.styl
+++ b/source/css/_pages/_base/inline.styl
@@ -40,7 +40,7 @@
   padding .45rem
 
   &:hover
-    background-color $link-hover-bg-color
+    background-color var(--link-hover-bg-color)
     transition-duration .2s
     transition-timing-function ease-in-out
     border-radius .15rem
